01-bootstrap/argocd-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ing-temp
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /tools/argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
